# qi-launch

./: README.md  biome.json  index.html  package.json  pnpm-lock.yaml  vite.config.ts
src/: AntdProvider.tsx  App.tsx  main.tsx
src-tauri/: Cargo.toml  installer.nsi  tauri.conf.json  tauri.macos.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/resources/zh-Hans.lproj/: InfoPlist.strings
src-tauri/src/: commands.rs  constants.rs  extractor.rs  lib.rs  main.rs  path.rs  shortcut.rs  types.rs
src-tauri/src/extractors/: high_resolution.rs  icon_group.rs  imagelist.rs  mod.rs  png_bmp.rs  shell_icon.rs  system_cache.rs  utils.rs
src-tauri/src/sources/: appdata.rs  desktop.rs  installed_programs.rs  macos.rs  mod.rs  program_files.rs  quick_launch.rs  scanner.rs  start_menu.rs  taskbar.rs  uwp.rs
src/components/: AppLoader.tsx  HeaderBar.tsx  IconGrid.tsx  IconTile.tsx  IconViewModal.tsx  LabeledSliderInput.tsx
src/components/form/: SettingsForm.tsx  default.ts
src/enums/: ThemeModeEnum.ts
src/hooks/: useAppIcons.ts  useWindowSize.ts
src/sync/: configSync.ts
src/sync/base/: crossWindowSync.ts
src/sync/types/: ConfigItem.ts
src/types/: OptionEnumType.ts  icon.ts
src/utils/: appUtils.ts  formUtils.ts
